Bug 91685 - Chart Axis Title rotated on OOXML round trip
Summary: Chart Axis Title rotated on OOXML round trip
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.1.0
Keywords: bibisectRequest, regression
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2015-05-28 04:38 UTC by Luke
Modified: 2021-04-29 05:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-05-28 04:38:56 UTC
Steps to reproduce:
1. Open attachment 104062 [details]
2. Save as DOCX
3. Close
4. Open

Note the Y-axis title is rotated 90 deg when viewed in Word and Writer.
Comment 1 raal 2015-05-28 06:06:33 UTC
No problem in LO 4.4.3, win7-> regression
Comment 2 Luke 2015-05-29 20:15:34 UTC
Added Markus as he's been working on the chart code
Comment 3 raal 2015-05-30 07:13:53 UTC
I can confirm with Version: 5.1.0.0.alpha1+
Build ID: ef2e135cfb8f107a154aaab9b54f2dfca0edf6a0
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-05-28_23:58:34
Comment 4 Commit Notification 2015-06-02 21:15:55 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa0e5e2928547398fdb53cafcefcd9c3ba9c6a7e

that special case was a really stupid idea, tdf#91685

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-06-02 21:15:59 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=365896fe45286c6545915e0fe8be0378f900ebad

add test for tdf#91685

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Luke 2015-06-04 03:47:37 UTC
Title orientation is now preserved in on round-trip. Verified on Word and Writer. Thanks Markus!
Comment 7 Robinson Tryon (qubit) 2015-12-17 09:13:04 UTC Comment hidden (obsolete)
Comment 8 jackrik 2021-04-29 05:07:05 UTC Comment hidden (spam)