that special case was a really stupid idea, tdf#91685

The default value is context depending and not 0. So always export the
rotation value.

Change-Id: I36162459757c58846f3ecea7dcbcb58b6ef3d1f6